--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.introtoandroid.inclass_activity_01_bundy.MainActivity">
 
-    <DatePicker
+    <!--<DatePicker
         android:id="@+id/DatePicker01"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -27,7 +27,29 @@
         android:spinnersShown="true"
         android:layout_below="@+id/DatePicker01"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="18dp" />
+        android:layout_marginTop="18dp" />-->
 
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:max="100"
+        android:progress="75"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="90dp" />
+
+    <RatingBar
+        android:id="@+id/ratebar1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:numStars="4"
+        android:stepSize="0.25"
+        android:rating="3"
+        android:layout_below="@+id/progress_bar"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="70dp"
+        android:layout_marginTop="64dp" />
 
 </RelativeLayout>
